prometheus/templates/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`monitor.k3s.xmple.io`) && (PathPrefix(`/grafana`))
    kind: Rule
    services:
    - kind: Service
      name: prometheus-grafana
      port: 80
  tls:
    secretName: monitoring-tls
    options:
      name: mintls13
      namespace: traefik
